--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "playwright test",
+    "e2e:watch": "playwright test --ui"
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.18",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.18",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -25,13 +31,29 @@
     "@angular-devkit/build-angular": "^19.2.3",
     "@angular/cli": "^19.2.3",
     "@angular/compiler-cli": "^19.2.0",
+    "@playwright/test": "^1.53.0",
+    "@softarc/eslint-plugin-sheriff": "^0.18.0",
+    "@softarc/sheriff-core": "^0.18.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
+    "angular-eslint": "20.0.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.28.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.6.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "lint-staged": "^16.1.0",
+    "postcss": "^8.5.5",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.10",
+    "ts-jest": "^29.4.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "8.33.1"
   }
 }
